{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 194,
  "lineage": "48f748eb-0482-0f95-632d-bce07bed2984",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/perplexity-clone-468820/regions/us-central1/networkEndpointGroups/perplexity-clone-backend-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-09-29T18:25:21.482-07:00",
            "enable_cdn": false,
            "fingerprint": "PDZ29PNAtvA=",
            "generated_id": 8508617197562007406,
            "id": "projects/perplexity-clone-468820/global/backendServices/perplexity-clone-backend-lb",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "perplexity-clone-backend-lb",
            "port_name": "http",
            "project": "perplexity-clone-468820",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/perplexity-clone-468820/global/backendServices/perplexity-clone-backend-lb",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_cloud_run_v2_service.backend",
            "google_compute_global_address.lb_ip",
            "google_compute_network.vpc",
            "google_compute_region_network_endpoint_group.backend_neg",
            "google_project_service.required",
            "google_service_account.cloud_run_sa",
            "google_vpc_access_connector.cloud_run"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "dispatcher",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/perplexity-clone-468820/regions/us-central1/networkEndpointGroups/perplexity-clone-dispatcher-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-09-29T23:16:09.970-07:00",
            "enable_cdn": false,
            "fingerprint": "aApLoUI66JI=",
            "generated_id": 402455038745037638,
            "id": "projects/perplexity-clone-468820/global/backendServices/perplexity-clone-dispatcher-lb",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "perplexity-clone-dispatcher-lb",
            "port_name": "http",
            "project": "perplexity-clone-468820",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/perplexity-clone-468820/global/backendServices/perplexity-clone-dispatcher-lb",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_cloud_run_v2_service.dispatcher",
            "google_compute_global_address.psa_range",
            "google_compute_network.vpc",
            "google_compute_region_network_endpoint_group.dispatcher_neg",
            "google_project_service.required",
            "google_redis_instance.change_cache",
            "google_service_account.cloud_run_sa",
            "google_service_networking_connection.psa_connection",
            "google_vpc_access_connector.cloud_run"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/perplexity-clone-468820/regions/us-central1/networkEndpointGroups/perplexity-clone-frontend-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-09-29T18:25:01.367-07:00",
            "enable_cdn": false,
            "fingerprint": "OAwMZ6txB1M=",
            "generated_id": 3208909368577134466,
            "id": "projects/perplexity-clone-468820/global/backendServices/perplexity-clone-frontend-lb",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "perplexity-clone-frontend-lb",
            "port_name": "http",
            "project": "perplexity-clone-468820",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/perplexity-clone-468820/global/backendServices/perplexity-clone-frontend-lb",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_cloud_run_v2_service.frontend",
            "google_compute_global_address.lb_ip",
            "google_compute_network.vpc",
            "google_compute_region_network_endpoint_group.frontend_neg",
            "google_project_service.required",
            "google_service_account.cloud_run_sa",
            "google_vpc_access_connector.cloud_run"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/perplexity-clone-468820/regions/us-central1/networkEndpointGroups/perplexity-clone-worker-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-09-29T23:16:09.922-07:00",
            "enable_cdn": false,
            "fingerprint": "3Smy33P3B7E=",
            "generated_id": 7441476845670157126,
            "id": "projects/perplexity-clone-468820/global/backendServices/perplexity-clone-worker-lb",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "perplexity-clone-worker-lb",
            "port_name": "http",
            "project": "perplexity-clone-468820",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/perplexity-clone-468820/global/backendServices/perplexity-clone-worker-lb",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_cloud_run_v2_service.worker",
            "google_compute_global_address.psa_range",
            "google_compute_network.vpc",
            "google_compute_region_network_endpoint_group.worker_neg",
            "google_project_service.required",
            "google_redis_instance.change_cache",
            "google_service_account.cloud_run_sa",
            "google_service_networking_connection.psa_connection",
            "google_vpc_access_connector.cloud_run"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "lb_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.120.207.183",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-09-29T18:14:00.728-07:00",
            "id": "projects/perplexity-clone-468820/global/addresses/perplexity-clone-lb-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "perplexity-clone-lb-ip",
            "prefix_length": 0,
            "project": "perplexity-clone-468820",
            "self_link": "https://www.googleapis.com/compute/v1/projects/perplexity-clone-468820/global/addresses/perplexity-clone-lb-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "psa_range",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.136.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2025-09-29T22:43:44.152-07:00",
            "id": "projects/perplexity-clone-468820/global/addresses/perplexity-clone-psa-range",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "perplexity-clone-psa-range",
            "network": "https://www.googleapis.com/compute/v1/projects/perplexity-clone-468820/global/networks/perplexity-clone-vpc",
            "prefix_length": 16,
            "project": "perplexity-clone-468820",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/perplexity-clone-468820/global/addresses/perplexity-clone-psa-range"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "projects/perplexity-clone-468820/global/forwardingRules/perplexity-clone-http-forwarding-rule",
            "ip_address": "34.120.207.183",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "perplexity-clone-http-forwarding-rule",
            "port_range": "80-80",
            "project": "perplexity-clone-468820",
            "self_link": "https://www.googleapis.com/compute/v1/projects/perplexity-clone-468820/global/forwardingRules/perplexity-clone-http-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/perplexity-clone-468820/global/targetHttpProxies/perplexity-clone-http-proxy"
          },
          "dependencies": [
            "google_compute_global_address.lb_ip",
            "google_compute_target_http_proxy.http_proxy",
            "google_compute_url_map.http_redirect"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "https_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "projects/perplexity-clone-468820/global/forwardingRules/perplexity-clone-https-forwarding-rule",
            "ip_address": "34.120.207.183",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "perplexity-clone-https-forwarding-rule",
            "port_range": "443-443",
            "project": "perplexity-clone-468820",
            "self_link": "https://www.googleapis.com/compute/v1/projects/perplexity-clone-468820/global/forwardingRules/perplexity-clone-https-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/perplexity-clone-468820/global/targetHttpsProxies/perplexity-clone-https-proxy"
          },
          "dependencies": [
            "google_cloud_run_v2_service.backend",
            "google_cloud_run_v2_service.dispatcher",
            "google_cloud_run_v2_service.frontend",
            "google_cloud_run_v2_service.worker",
            "google_compute_backend_service.backend",
            "google_compute_backend_service.dispatcher",
            "google_compute_backend_service.frontend",
            "google_compute_backend_service.worker",
            "google_compute_global_address.lb_ip",
            "google_compute_global_address.psa_range",
            "google_compute_managed_ssl_certificate.ssl_cert",
            "google_compute_network.vpc",
            "google_compute_region_network_endpoint_group.backend_neg",
            "google_compute_region_network_endpoint_group.dispatcher_neg",
            "google_compute_region_network_endpoint_group.frontend_neg",
            "google_compute_region_network_endpoint_group.worker_neg",
            "google_compute_target_https_proxy.https_proxy",
            "google_compute_url_map.url_map",
            "google_project_service.required",
            "google_redis_instance.change_cache",
            "google_service_account.cloud_run_sa",
            "google_service_networking_connection.psa_connection",
            "google_vpc_access_connector.cloud_run"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/perplexity-clone-468820/global/networks/perplexity-clone-vpc",
            "mtu": 0,
            "name": "perplexity-clone-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "1509922586630721591",
            "project": "perplexity-clone-468820",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/perplexity-clone-468820/global/networks/perplexity-clone-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-09-29T18:14:22.238-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/perplexity-clone-468820/regions/us-central1/subnetworks/perplexity-clone-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "perplexity-clone-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/perplexity-clone-468820/global/networks/perplexity-clone-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "perplexity-clone-468820",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/perplexity-clone-468820/regions/us-central1/subnetworks/perplexity-clone-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-09-29T18:14:11.888-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/perplexity-clone-468820/global/targetHttpProxies/perplexity-clone-http-proxy",
            "name": "perplexity-clone-http-proxy",
            "project": "perplexity-clone-468820",
            "proxy_bind": false,
            "proxy_id": 8029474236612907020,
            "self_link": "https://www.googleapis.com/compute/v1/projects/perplexity-clone-468820/global/targetHttpProxies/perplexity-clone-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/perplexity-clone-468820/global/urlMaps/perplexity-clone-http-redirect"
          },
          "dependencies": [
            "google_compute_url_map.http_redirect"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "https_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-09-29T18:26:57.024-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/perplexity-clone-468820/global/targetHttpsProxies/perplexity-clone-https-proxy",
            "name": "perplexity-clone-https-proxy",
            "project": "perplexity-clone-468820",
            "proxy_bind": false,
            "proxy_id": 4672559842810302223,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/perplexity-clone-468820/global/targetHttpsProxies/perplexity-clone-https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/perplexity-clone-468820/global/sslCertificates/perplexity-clone-ssl-cert"
            ],
            "tls_early_data": "DISABLED",
            "url_map": "https://www.googleapis.com/compute/v1/projects/perplexity-clone-468820/global/urlMaps/perplexity-clone-url-map"
          },
          "dependencies": [
            "google_cloud_run_v2_service.backend",
            "google_cloud_run_v2_service.dispatcher",
            "google_cloud_run_v2_service.frontend",
            "google_cloud_run_v2_service.worker",
            "google_compute_backend_service.backend",
            "google_compute_backend_service.dispatcher",
            "google_compute_backend_service.frontend",
            "google_compute_backend_service.worker",
            "google_compute_global_address.lb_ip",
            "google_compute_global_address.psa_range",
            "google_compute_managed_ssl_certificate.ssl_cert",
            "google_compute_network.vpc",
            "google_compute_region_network_endpoint_group.backend_neg",
            "google_compute_region_network_endpoint_group.dispatcher_neg",
            "google_compute_region_network_endpoint_group.frontend_neg",
            "google_compute_region_network_endpoint_group.worker_neg",
            "google_compute_url_map.url_map",
            "google_project_service.required",
            "google_redis_instance.change_cache",
            "google_service_account.cloud_run_sa",
            "google_service_networking_connection.psa_connection",
            "google_vpc_access_connector.cloud_run"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-09-29T18:14:00.684-07:00",
            "default_route_action": [],
            "default_service": "",
            "default_url_redirect": [
              {
                "host_redirect": "",
                "https_redirect": true,
                "path_redirect": "",
                "prefix_redirect": "",
                "redirect_response_code": "",
                "strip_query": false
              }
            ],
            "description": "",
            "fingerprint": "qvpmt78K8Yk=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/perplexity-clone-468820/global/urlMaps/perplexity-clone-http-redirect",
            "map_id": 3059977765520838711,
            "name": "perplexity-clone-http-redirect",
            "path_matcher": [],
            "project": "perplexity-clone-468820",
            "self_link": "https://www.googleapis.com/compute/v1/projects/perplexity-clone-468820/global/urlMaps/perplexity-clone-http-redirect",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-09-29T18:26:45.995-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/perplexity-clone-468820/global/backendServices/perplexity-clone-frontend-lb",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "uicLanZzljY=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "*"
                ],
                "path_matcher": "api-routing"
              }
            ],
            "id": "projects/perplexity-clone-468820/global/urlMaps/perplexity-clone-url-map",
            "map_id": 5593494740532629306,
            "name": "perplexity-clone-url-map",
            "path_matcher": [
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/perplexity-clone-468820/global/backendServices/perplexity-clone-frontend-lb",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "api-routing",
                "path_rule": [
                  {
                    "paths": [
                      "/api/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/perplexity-clone-468820/global/backendServices/perplexity-clone-backend-lb",
                    "url_redirect": []
                  },
                  {
                    "paths": [
                      "/dispatcher/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/perplexity-clone-468820/global/backendServices/perplexity-clone-dispatcher-lb",
                    "url_redirect": []
                  },
                  {
                    "paths": [
                      "/worker/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/perplexity-clone-468820/global/backendServices/perplexity-clone-worker-lb",
                    "url_redirect": []
                  }
                ],
                "route_rules": []
              }
            ],
            "project": "perplexity-clone-468820",
            "self_link": "https://www.googleapis.com/compute/v1/projects/perplexity-clone-468820/global/urlMaps/perplexity-clone-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_cloud_run_v2_service.backend",
            "google_cloud_run_v2_service.dispatcher",
            "google_cloud_run_v2_service.frontend",
            "google_cloud_run_v2_service.worker",
            "google_compute_backend_service.backend",
            "google_compute_backend_service.dispatcher",
            "google_compute_backend_service.frontend",
            "google_compute_backend_service.worker",
            "google_compute_global_address.lb_ip",
            "google_compute_global_address.psa_range",
            "google_compute_network.vpc",
            "google_compute_region_network_endpoint_group.backend_neg",
            "google_compute_region_network_endpoint_group.dispatcher_neg",
            "google_compute_region_network_endpoint_group.frontend_neg",
            "google_compute_region_network_endpoint_group.worker_neg",
            "google_project_service.required",
            "google_redis_instance.change_cache",
            "google_service_account.cloud_run_sa",
            "google_service_networking_connection.psa_connection",
            "google_vpc_access_connector.cloud_run"
          ]
        }
      ]
    }
  ]
}